...
                app:iconSize="16dp"
                app:iconTint="@color/lh_background"
                app:layout_constraintBottom_toBottomOf="@id/tvAvatar"
                app:layout_constraintEnd_toEndOf="@id/tvAvatar" />

            <TextView
                android:id="@+id/tvOlaNome"
                style="@style/LH.Text.Section"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
...
                android:text="@string/dados_pessoais"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvPacientesAtivos" />

            <include
                android:id="@+id/opcaoDados"
                layout="@layout/item_config_opcao"
                android:layout_width="0dp"
                android:layout_height="52dp"
                android:layout_marginTop="@dimen/lh_space_s"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
...
