...
        android:text="@string/convites"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/headerSaudacao" />

    <TextView
        android:id="@+id/tvVazio"
        style="@style/LH.Text.Caption"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/lh_space_m"
        android:text="@string/sem_convites"
        android:visibility="gone"
...
